# FundFlowai

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  docker-compose.yml  feedback_store.json  pyrightconfig.json  run_demo.py  system_design.md
dashboard/dashboard/: index.html  package-lock.json  package.json
dashboard/dashboard/src/: App.tsx  api.ts  main.tsx  types.ts
dashboard/dashboard/src/components/: AlertsList.tsx  EntityDetail.tsx  EvidencePanel.tsx  GraphView.tsx
data-generator/: pyproject.toml
data-generator/data_generator/: __init__.py  accounts.py  generator.py  output.py  transactions.py
data-generator/data_generator/patterns/: __init__.py  dormant_activation.py  layering.py  profile_mismatch.py  round_tripping.py  structuring.py
data-generator/output/: ground_truth.json  summary.txt
data-generator/tests/: test_generator.py
detection-models/: pyproject.toml
detection-models/detection_models/: evaluation.py  explainability.py
detection-models/detection_models/features/: account_features.py  graph_features.py
detection-models/detection_models/models/: dormant_svm.py  layering_gnn.py  profile_mismatch_lgbm.py  round_trip_xgb.py  structuring_iforest.py
detection-models/tests/: test_detection_models.py
feedback/: __init__.py  api.py  feedback_core.py  pyproject.toml  test_feedback.py
graph-engine/: pyproject.toml
graph-engine/graph_engine/: __init__.py  loader.py  queries.py  schema.py
graph-engine/tests/: test_graph_engine.py
risk-scoring/: pyproject.toml  test_out.txt
risk-scoring/risk_scoring/: __init__.py  api.py  config.py  evidence.py  scorer.py  signals.py
risk-scoring/tests/: test_api.py
