[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fundflow-feedback"
version = "0.1.0"
description = "Phase 6: Feedback & Model Improvement Loop"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
py-modules = ["feedback_core"]

[tool.setuptools.packages.find]
include = ["feedback*"]
exclude = ["__pycache__*"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
